--- a/src/global.css
+++ b/src/global.css
@@ -146,7 +146,7 @@
 
 @font-face {
   font-family: "PP Editorial";
-  src: url("/fonts/pp-editorial.woff2") format("woff2");
+  src: url("/fonts/Iosekva-Regular.ttc") format("ttc");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
