--- a/src/global.css
+++ b/src/global.css
@@ -250,14 +250,14 @@
     @apply bg-background text-foreground font-sans;
   }
   h1 {
-    @apply text-6xl font-serif @xs:text-8xl;
+    @apply text-6xl font-heading @xs:text-8xl;
     line-height: 3.2rem;
   }
   h2 {
-    @apply text-4xl font-serif;
+    @apply text-4xl font-heading;
   }
   h3 {
-    @apply text-2xl font-serif;
+    @apply text-2xl font-heading;
   }
   a {
     @apply border-b-1;
