--- a/src/global.css
+++ b/src/global.css
@@ -13,6 +13,10 @@
   --font-serif: "PP Editorial";
   --font-heading: "Poppins Bold";
   --font-subheading: "Poppins";
+  --font-sans:
+    "Geist", "Inter", "Inter override", ui-sans-serif, system-ui, sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --font-mono: "Geist Mono", monospace;
 
   --color-border: var(--border);
   --color-input: var(--input);
@@ -46,11 +50,6 @@
   --radius-lg: var(--radius);
   --radius-md: calc(var(--radius) - 2px);
   --radius-sm: calc(var(--radius) - 4px);
-
-  --font-sans:
-    Geist, Inter, Inter override, ui-sans-serif, system-ui, sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --font-mono: "Geist Mono", monospace;
 
   --font-family-sans: var(--font-sans);
   --font-family-serif: var(--font-serif);
@@ -131,6 +130,7 @@
   }
 
   .dark {
+    color-scheme: dark;
     --background: hsl(0 0% 12%);
     --tertiary: hsl(0, 0%, 12%);
     --foreground: hsl(0 0% 98%);
@@ -154,6 +154,7 @@
   }
 
   .midnight {
+    color-scheme: dark;
     --background: hsl(240 10% 3.9%);
     --tertiary: hsl(240 10% 3.9%);
     --foreground: hsl(0 0% 98%);
@@ -177,6 +178,7 @@
   }
 
   .gruvbox {
+    color-scheme: dark;
     --background: hsl(40 13% 15%); /* #282828 */
     --tertiary: hsl(40 13% 15%); /* #282828 */
     --foreground: hsl(40 53% 84%); /* #ebdbb2 */
@@ -284,6 +286,7 @@
 @layer base {
   * {
     @apply border-border;
+    scrollbar-width: thin;
   }
 
   html {
